unpackaged/main/default/objects/Account/fields/DistributorLevel3__c.field-meta.xml
<CustomField>
    <fullName>DistributorLevel3__c</fullName>
    <label>Distributor Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Glazer-Arkansas</fullName>
            </value>
            <value>
                <fullName>Glazer-Kansas</fullName>
            </value>
            <value>
                <fullName>Glazer-Louisiana</fullName>
            </value>
            <value>
                <fullName>Glazer-Ohio</fullName>
            </value>
            <value>
                <fullName>Glazer-Texas</fullName>
            </value>
            <value>
                <fullName>Hartley &amp; Parker Ltd-Total</fullName>
            </value>
            <value>
                <fullName>Horizon - Total</fullName>
            </value>
            <value>
                <fullName>Johnson Bros-Total</fullName>
            </value>
            <value>
                <fullName>Knoxville Bev-Total</fullName>
            </value>
            <value>
                <fullName>M.S Walker-Total</fullName>
            </value>
            <value>
                <fullName>Major Brands - Total</fullName>
            </value>
            <value>
                <fullName>Phillips-Total</fullName>
            </value>
            <value>
                <fullName>R&amp;R Marketing-Total</fullName>
            </value>
            <value>
                <fullName>Rndc - Total</fullName>
            </value>
            <value>
                <fullName>Star Distributors-Total</fullName>
            </value>
            <value>
                <fullName>Sws-Alaska</fullName>
            </value>
            <value>
                <fullName>Sws-Arizona</fullName>
            </value>
            <value>
                <fullName>Sws-Colorado</fullName>
            </value>
            <value>
                <fullName>Sws-Delaware</fullName>
            </value>
            <value>
                <fullName>Sws-Florida</fullName>
            </value>
            <value>
                <fullName>Sws-Hawaii</fullName>
            </value>
            <value>
                <fullName>Sws-Illinois</fullName>
            </value>
            <value>
                <fullName>Sws-Kentucky</fullName>
            </value>
            <value>
                <fullName>Sws-Metro Ny</fullName>
            </value>
            <value>
                <fullName>Sws-Minnesota</fullName>
            </value>
            <value>
                <fullName>Sws-Nevada</fullName>
            </value>
            <value>
                <fullName>Sws-New Mexico</fullName>
            </value>
            <value>
                <fullName>Sws-No California</fullName>
            </value>
            <value>
                <fullName>Sws-So California</fullName>
            </value>
            <value>
                <fullName>Sws-South Carolina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>