unpackaged/main/default/objects/Account/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Account Division.</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Division</fullName>
            </value>
            <value>
                <fullName>East Coast Division</fullName>
            </value>
            <value>
                <fullName>Eastern Control Division</fullName>
            </value>
            <value>
                <fullName>Florida Division</fullName>
            </value>
            <value>
                <fullName>Franchise Division</fullName>
            </value>
            <value>
                <fullName>Mideast Division</fullName>
            </value>
            <value>
                <fullName>Midsouth Division</fullName>
            </value>
            <value>
                <fullName>Midwest Division</fullName>
            </value>
            <value>
                <fullName>Mountain Division</fullName>
            </value>
            <value>
                <fullName>West Coast Division</fullName>
            </value>
            <value>
                <fullName>Western Control Division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>