unpackaged/main/default/objects/Account/fields/DMA__c.field-meta.xml
<CustomField>
    <fullName>DMA__c</fullName>
    <inlineHelpText>Designated Marketing Area</inlineHelpText>
    <label>DMA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABILENE-SWEETWATER TX</fullName>
            </value>
            <value>
                <fullName>ALBANY GA</fullName>
            </value>
            <value>
                <fullName>ALBANY-SCHENECTADY-TROY NY</fullName>
            </value>
            <value>
                <fullName>ALBUQUERQUE-SANTA FE NM</fullName>
            </value>
            <value>
                <fullName>ALEXANDRIA LA</fullName>
            </value>
            <value>
                <fullName>ALPENA MI</fullName>
            </value>
            <value>
                <fullName>AMARILLO TX</fullName>
            </value>
            <value>
                <fullName>ANCHORAGE AK</fullName>
            </value>
            <value>
                <fullName>ATLANTA GA</fullName>
            </value>
            <value>
                <fullName>AUGUSTA GA</fullName>
            </value>
            <value>
                <fullName>AUSTIN TX</fullName>
            </value>
            <value>
                <fullName>BAKERSFIELD CA</fullName>
            </value>
            <value>
                <fullName>BALTIMORE MD</fullName>
            </value>
            <value>
                <fullName>BANGOR ME</fullName>
            </value>
            <value>
                <fullName>BATON ROUGE LA</fullName>
            </value>
            <value>
                <fullName>BEAUMONT-PORT ARTHUR TX</fullName>
            </value>
            <value>
                <fullName>BEND OR</fullName>
            </value>
            <value>
                <fullName>BILLINGS MT</fullName>
            </value>
            <value>
                <fullName>BILOXI-GULFPORT MS</fullName>
            </value>
            <value>
                <fullName>BINGHAMTON NY</fullName>
            </value>
            <value>
                <fullName>BIRMINGHAM (ANNISTON TUSCALOOSA) AL</fullName>
            </value>
            <value>
                <fullName>BLUEFIELD-BECKLEY-OAK HILL WV</fullName>
            </value>
            <value>
                <fullName>BOISE ID</fullName>
            </value>
            <value>
                <fullName>BOSTON (MANCHESTER) MA-NH</fullName>
            </value>
            <value>
                <fullName>BOWLING GREEN KY</fullName>
            </value>
            <value>
                <fullName>BUFFALO NY</fullName>
            </value>
            <value>
                <fullName>BURLINGTON-PLATTSBURGH VT-NY</fullName>
            </value>
            <value>
                <fullName>BUTTE-BOZEMAN MT</fullName>
            </value>
            <value>
                <fullName>CASPER-RIVERTON WY</fullName>
            </value>
            <value>
                <fullName>CEDAR RAPIDS-WATERLOO &amp; DUBUQUE IA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>