unpackaged/main/default/objects/Account/fields/DrinkFeaturesSpecial__c.field-meta.xml
<CustomField>
    <fullName>DrinkFeaturesSpecial__c</fullName>
    <label>Drink Features / Special</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>