unpackaged/main/default/objects/Account/fields/eCommerce_Pure_Play_Account__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_Pure_Play_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator for eCommerce Pure-Play Accounts. Checked accounts will be passed to Aperity to include in eCommerce sales figures for Financial tracking dashboard</description>
    <inlineHelpText>Indicator for tagging eCommerce Pure-Play Accounts</inlineHelpText>
    <label>eCommerce Pure-Play Account</label>
    <type>Checkbox</type>
</CustomField>