unpackaged/main/default/objects/Account/fields/EDGE_Account_Maturity__c.field-meta.xml
<CustomField>
    <fullName>EDGE_Account_Maturity__c</fullName>
    <description>Number of quarters an account has been in an EDGE Route.</description>
    <inlineHelpText># qtrs account has been in any EDGE route</inlineHelpText>
    <label>EDGE Account Maturity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>