unpackaged/main/default/objects/Account/fields/EDGE_Group__c.field-meta.xml
<CustomField>
    <fullName>EDGE_Group__c</fullName>
    <label>EDGE Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>LFL</fullName>
            </value>
            <value>
                <fullName>LUX</fullName>
            </value>
            <value>
                <fullName>NON-EDGE</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>MCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>