unpackaged/main/default/objects/Account/fields/EDI_Customer__c.field-meta.xml
<CustomField>
    <fullName>EDI_Customer__c</fullName>
    <label>EDI Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>