unpackaged/main/default/objects/Account/fields/EmailBlasts__c.field-meta.xml
<CustomField>
    <fullName>EmailBlasts__c</fullName>
    <label>Email Blasts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>