unpackaged/main/default/objects/Account/fields/Expected_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Volume__c</fullName>
    <label>Expected Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>