unpackaged/main/default/objects/Account/fields/External_Id_Aperity__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Aperity__c</fullName>
    <externalId>true</externalId>
    <label>External Id Aperity</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>