unpackaged/main/default/objects/Account/fields/FeatureAds__c.field-meta.xml
<CustomField>
    <fullName>FeatureAds__c</fullName>
    <label>Feature Ads</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>