unpackaged/main/default/objects/Account/fields/FoodTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>FoodTypeDescription__c</fullName>
    <label>Food Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>