unpackaged/main/default/objects/Account/fields/Global_Customer__c.field-meta.xml
<CustomField>
    <fullName>Global_Customer__c</fullName>
    <label>GTR Global Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>