unpackaged/main/default/objects/Account/fields/GTR_Customer_Level_5__c.field-meta.xml
<CustomField>
    <fullName>GTR_Customer_Level_5__c</fullName>
    <description>GTR SAP Level 5 Hierarchy Value</description>
    <label>GTR Customer Level 5</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APTR</fullName>
            </value>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>ETR</fullName>
            </value>
            <value>
                <fullName>GTR HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>