unpackaged/main/default/objects/Account/fields/GTR_Regional_Customer__c.field-meta.xml
<CustomField>
    <fullName>GTR_Regional_Customer__c</fullName>
    <label>GTR Regional Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>