unpackaged/main/default/objects/Account/fields/GTR_Sales_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>GTR_Sales_Responsibility__c</fullName>
    <label>GTR Sales Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global Accounts</fullName>
            </value>
            <value>
                <fullName>EM, Cruise &amp; 3P</fullName>
            </value>
            <value>
                <fullName>GTR HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>