unpackaged/main/default/objects/Account/fields/GTR_Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>GTR_Sales_Type__c</fullName>
    <label>GTR Sales Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>