unpackaged/main/default/objects/Account/fields/GTR_Sub_Business_Structure__c.field-meta.xml
<CustomField>
    <fullName>GTR_Sub_Business_Structure__c</fullName>
    <label>GTR Sub-Business Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All Others</fullName>
            </value>
            <value>
                <fullName>ARI</fullName>
            </value>
            <value>
                <fullName>ATR Cruise</fullName>
            </value>
            <value>
                <fullName>DFS</fullName>
            </value>
            <value>
                <fullName>Dufry</fullName>
            </value>
            <value>
                <fullName>GTR HQ</fullName>
            </value>
            <value>
                <fullName>Heinemann</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Lagardere</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>Nordics</fullName>
            </value>
            <value>
                <fullName>North Asia</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>Strategic 3P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>