unpackaged/main/default/objects/Account/fields/gvc_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>gvc_Distribution_Channel__c</fullName>
    <formula>gvp__Territory__r.gvp__Region__r.gvp__Division__r.gvp__Custom_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Channel</label>
    <type>Text</type>
</CustomField>