unpackaged/main/default/objects/Account/fields/gvc_Number_of_menus__c.field-meta.xml
<CustomField>
    <fullName>gvc_Number_of_menus__c</fullName>
    <description>Number of menus physically present at the outlet</description>
    <inlineHelpText>Number of menus physically present at the outlet</inlineHelpText>
    <label># of menus</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>