unpackaged/main/default/objects/Account/fields/gvc_On_Premise_Type__c.field-meta.xml
<CustomField>
    <fullName>gvc_On_Premise_Type__c</fullName>
    <label>On-Premise Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imagen</fullName>
            </value>
            <value>
                <fullName>Volumen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>